--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -21,8 +21,14 @@
         <p class="mb-4"> All contracts of customers about insurances .</p>
         <div style="margin-bottom:15px;">
             <div class="card-footer">
-                
-                @ViewBag.totalprice
+                @foreach (var item in Model)
+                {
+                    if(item.Status == 3){
+                        <div>Total Price: $@ViewBag.totalprice</div>
+                        break;
+                    }
+                }
+
                 <!-- DataTales Example -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
@@ -179,7 +185,7 @@
                                                             <option value="2">Pay</option>
                                                             <option value="3">Done</option>
                                                             <option value="4">All</option>
-                                                            
+
                                                         </select>
                                                     </div>
                                                 </div>
@@ -207,7 +213,7 @@
                         </div>
 
                     </div>
-                </div>                
+                </div>
 
 
                 @section Scripts{
@@ -236,15 +242,15 @@
                                     ]
                                 },
                                 "firstDay": 1
-                            },cb);
+                            }, cb);
                             cb(start, end);
-                            $('#reportrange').on('cancel.daterangepicker',function (ev, picker) {
-                                    $('#reportrange').val('');
-                                });
+                            $('#reportrange').on('cancel.daterangepicker', function (ev, picker) {
+                                $('#reportrange').val('');
+                            });
                             $('#reportrange').on('apply.daterangepicker',
                                 function (ev, picker) {
-                                     startDate = picker.startDate.format('YYYY-MM-DD');
-                                     endDate = picker.endDate.format('YYYY-MM-DD');
+                                    startDate = picker.startDate.format('YYYY-MM-DD');
+                                    endDate = picker.endDate.format('YYYY-MM-DD');
                                     var listcontracts = $('select#listcontracts option:checked').val();
                                     window.location.href = window.location.href.split('?')[0] +
                                         '?listcontracts=' +
@@ -305,7 +311,7 @@
                                     changeStatusPTTime(selectedIDs, action);
                                 };
                             }
-                        
+
                         });
 
                         function changeStatusPTTime(selectedIDs, action) {
